--- a/src/html/m/index.html
+++ b/src/html/m/index.html
@@ -23,7 +23,7 @@
 
                </div>
                    <div class="span4 j-flag">
-
+                        <h2>右边待填充内容</h2>
                    </div>
                 </div>
             </div>
