--- a/src/html/app.html
+++ b/src/html/app.html
@@ -11,9 +11,7 @@
     </style>
 </head>
 <body>
-<div id="module-box">
-
-</div>
+<div id="module-box"></div>
 
     <div id="template-box" style="display:none;">
         <!-- @MODULE -->
