--- a/src/html/app.html
+++ b/src/html/app.html
@@ -20,6 +20,7 @@
         <textarea name="html" data-src="private/front/user/index.html"></textarea>
         <textarea name="html" data-src="m/index.html"></textarea>
         <textarea name="html" data-src="m/front/index.html"></textarea>
+        <textarea name="html" data-src="m/topic/index.html"></textarea>
         <!-- /@MODULE -->
     </div>
 
@@ -27,7 +28,7 @@
     <script>location.config={root:'./'};</script>
 
     <!-- @SCRIPT-->
-    <script type="text/javascript" src="../javascript/nej/src/define.js?p=wk|td-1&pro=../javascript/"></script>
+    <script type="text/javascript" src="../javascript/nej/src/define.js?pro=../javascript/"></script>
     <script type="text/javascript" src="../javascript/app.js"></script>
 </body>
 </html>
