--- a/src/html/m/front/index.html
+++ b/src/html/m/front/index.html
@@ -1,6 +1,13 @@
 <textarea name="txt" id="front">
-    <div class="j-flag"><!--tab--></div>
-    <div class="j-flag"></div>
+    <div class="sui-row-fluid">
+        <div class="span8">
+            <div class="j-flag"><!--tab--></div>
+            <div class="j-flag"></div>
+        </div>
+        <div class="span4 j-flag">
+        </div>
+    </div>
+
 </textarea>
 
 <textarea name="js" data-src="./index.js"></textarea>
