--- a/src/html/m/index.html
+++ b/src/html/m/index.html
@@ -17,16 +17,9 @@
         </div>
         </div>
     <div class="sui-container">
-        <div class="grid-demo">
-           <div class="sui-row-fluid">
-               <div class="span8 j-flag">
+        <div class="grid-demo j-flag">
 
-               </div>
-                   <div class="span4 j-flag">
-                        <h2>右边待填充内容</h2>
-                   </div>
-                </div>
-            </div>
+
         </div>
     </div>
 </textarea>
