--- a/src/html/private/front/user/index.html
+++ b/src/html/private/front/user/index.html
@@ -1,11 +1,28 @@
 <textarea name="txt" id="front-user">
-    <ul class="sui-nav nav-tabs nav-xlarge nav-primary j-flag">
-        <li class="active" data-id="all"><a href="#/m/?tab=all">全部</a></li>
-        <li data-id="good"><a href="#/m/?tab=good">精华</a></li>
-        <li data-id="share"><a href="#/m/?tab=share">分享</a></li>
-        <li data-id="ask"><a href="#/m/?tab=ask">问答</a></li>
-        <li data-id="job"><a href="#/m/?tab=job">招聘</a></li>
-    </ul>
+    <div>
+        <div  class="j-flag">
+        </div>
+    </div>
+</textarea>
+
+<textarea name="txt" id="front-user-login-box">
+    <div class="ui-box">
+        <div class="ui-box-head">
+            <h3 class="ui-box-head-title">CNode：Node.js专业中文社区</h3>
+        </div>
+        <div class="ui-box-container">
+            <div class="ui-box-content">
+                <div>
+                    您可以
+                    <a href="#/m/signin/">登录</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</textarea>
+
+<textarea name="txt" id="front-user-info-box">
+
 </textarea>
 
 <textarea name="js" data-src="./index.js"></textarea>
